2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>

	* CSharpBindingCompilerManager.cs: Fixed regex for parsing
	  errors. The line+column group is optional in csc.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Parser/CSharpFormatter.cs: Fixed "Bug 533986 - Autoformat:
	  issue when pressing enter at the end of a line".

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: Use GetContent instead
	  of casting.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: fixed possible null
	  reference exception.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorIndentation.cs: Fixed "Bug 533683 - File
	  header automatically expanded".

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryParameterDataProvider.cs:
	* Gui/NRefactoryIndexerParameterDataProvider.cs: Indexer xml
	  docs are now displayed.

2009-08-25  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryIndexerParameterDataProvider.cs:
	* Gui/NRefactoryTemplateParameterDataProvider.cs: Worked on
	  data providers.

2009-08-25  Lluis Sanchez Gual  <lluis@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: Fix windows build.

2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryIndexerParameterDataProvider.cs: Remvoved
	  duplicate indexer.

2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* Makefile.am:
	* CSharpBinding.csproj:
	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/NRefactoryIndexerParameterDataProvider.cs:
	* Gui/NRefactoryTemplateParameterDataProvider.cs: Implemented
	  Bug 361573 - Code completion for indexers not working.

2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs: Fixed 'Bug 533681 - Method
	  overriding always uses full namespaces'.

2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* CSharpEnhancedCodeProvider.cs: Track API changes

2009-08-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewCSharpExpressionFinder.cs: It's now possible to