@@ -1,3 +1,8 @@
+2009-08-26  Mike Krüger  <mkrueger@novell.com>
+
+	* Parser/FindMemberAstVisitor.cs: Optimized find all
+	  references operation.
+
 2009-08-26  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* CSharpBindingCompilerManager.cs: Fixed regex for parsing
